package dk.sdu.mmmi.ai;

import dk.sdu.mmmi.common.data.ai.Node;

public class BombPlacing {
    Node calculateOptimalPlacement(){
        //remove later
        Node node = new Node(2,2);
        return node;
    }
}
