package dk.sdu.mmi.enemy;

public class Enemy { // Extends Entity
}
